[Media Router] Wire through a new MRPM call to update media sinks.

This will allow any discovery which is based off of sink queries (such as the Cloud MRP) an opportuntity to find new sinks even if the MRP is marked as UNVAILABLE.

BUG=601065

Review URL: https://codereview.chromium.org/1862913004

Cr-Commit-Position: refs/heads/master@{#387809}

Former-commit-id: c2f9e3a5a7bf211b14c1be7ae8bfa65a518c2b85